# Jakopter

./: .gitignore  CMakeLists.txt  Makefile  README.md  clear_cmake_generated_files.sh  cmake_install.cmake  com_channel.c  com_channel.h  common.h  drone.c  drone.h  lua_bindings.c  macports.sh  main_lua.lua  navdata.c  navdata.h  test_icon.lua  video.c  video.h  video_decode.c  video_decode.h  video_display.c  video_display.h  video_frame_queue.h  video_process.c  video_process.h
cmake/Modules/: FindCURL.cmake  FindFFMPEG.cmake  FindLeap.cmake  FindLua.cmake  FindSDL2.cmake  FindSDL2Image.cmake  FindSDL2TTF.cmake  FindSDL2_ttf.cmake  FindVRPN.cmake  FindVicon.cmake  FindVisp.cmake
doc/: config-doxygen  config-doxygen.in  mainpage.doc  mainpage.doc.in
doc/html/: annotated.html  annotated.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_dup.js  globals_e.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_func.js  globals_func_d.html  globals_func_g.html  globals_func_i.html  globals_func_j.html  globals_func_l.html  globals_func_m.html  globals_func_n.html  globals_func_p.html  globals_func_r.html  globals_func_s.html  globals_func_t.html  globals_func_u.html  globals_func_v.html  globals_func_w.html  globals_func_y.html  globals_g.html  globals_h.html  globals_i.html  (+21 more)
doc/html/d0/d30/: md_README.html
doc/html/d0/d32/: mainpage_8doc.html
doc/html/d0/d8a/: structCurlData.html  structCurlData.js
doc/html/d0/df5/: visp_8h.html  visp_8h.js  visp_8h_source.html
doc/html/d1/dea/: navdata_8h.html  navdata_8h.js  navdata_8h_source.html
doc/html/d2/d40/: drone_8h.html  drone_8h.js  drone_8h_source.html
doc/html/d3/d83/: structgraphics__list.html  structgraphics__list.js
doc/html/d3/d94/: coords_8h.html  coords_8h.js  coords_8h_source.html
doc/html/d4/d08/: coords_8c.html  coords_8c.js  coords_8c_source.html
doc/html/d4/d4e/: video__dump_8h.html  video__dump_8h.js  video__dump_8h_source.html
doc/html/d4/d95/: video__display_8c.html  video__display_8c.js  video__display_8c_source.html
doc/html/d4/df9/: structnavdata__demo.html  structnavdata__demo.js
doc/html/d5/d2a/: video__opencv_8h.html  video__opencv_8h.js  video__opencv_8h_source.html
doc/html/d5/d60/: utils_8h.html  utils_8h.js  utils_8h_source.html
doc/html/d5/df6/: drone_8c.html  drone_8c.js  drone_8c_source.html
doc/html/d6/d6e/: network_8c.html  network_8c.js  network_8c_source.html
doc/html/d6/dd3/: video__decode_8h.html  video__decode_8h.js  video__decode_8h_source.html
doc/html/d7/d02/: lua__bindings_8c.html  lua__bindings_8c.js  lua__bindings_8c_source.html
doc/html/d7/d45/: video_8c.html  video_8c.js  video_8c_source.html
doc/html/d7/d68/: video__dump_8c.html  video__dump_8c.js  video__dump_8c_source.html
doc/html/d8/d06/: structjakopter__video__frame__t.html  structjakopter__video__frame__t.js
doc/html/d8/dd0/: video__queue_8c.html  video__queue_8c.js  video__queue_8c_source.html
doc/html/d9/d57/: structnavdata__option.html  structnavdata__option.js
doc/html/d9/d94/: network_8h.html  network_8h.js  network_8h_source.html
doc/html/da/d10/: com__channel_8c.html  com__channel_8c.js  com__channel_8c_source.html
doc/html/da/d32/: cmd_8c.html  cmd_8c.js  cmd_8c_source.html
doc/html/da/d61/: unionnavdata__t.html  unionnavdata__t.js
doc/html/da/dbb/: com__master_8c.html  com__master_8c.js  com__master_8c_source.html  user__input_8h.html  user__input_8h.js  user__input_8h_source.html
doc/html/da/ddd/: README_8md.html  README_8md_source.html
doc/html/db/dab/: navdata_8c.html  navdata_8c.js  navdata_8c_source.html
doc/html/dc/d1b/: com__master_8h.html  com__master_8h.js  com__master_8h_source.html
doc/html/dc/d54/: common_8h.html  common_8h.js  common_8h_source.html
doc/html/dc/d9e/: video__decode_8c.html  video__decode_8c.js  video__decode_8c_source.html
doc/html/dc/dea/: video__display_8h.html  video__display_8h.js  video__display_8h_source.html
doc/html/dd/d3e/: structjakopter__frame__processing.html  structjakopter__frame__processing.js
doc/html/dd/d78/: video_8h.html  video_8h.js  video_8h_source.html
doc/html/dd/d7c/: video__queue_8h.html  video__queue_8h.js  video__queue_8h_source.html
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_10.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  (+74 more)
include/: com_channel.h  com_master.h  common.h  common.h.in  coords.h  drone.h  leapdata.h  navdata.h  network.h  user_input.h  utils.h  utils.h.in  video.h  video_decode.h  video_display.h  video_dump.h  video_opencv.h  video_queue.h  visp.h
scripts/: color_filter.lua  coords.lua  land.lua  pid.lua  test_coords.lua  test_face.lua  test_icon.lua  test_pid.lua  test_takeoff.lua  test_video.lua  userinput.lua  userinput_leap.lua  userinput_zqsd.lua
src/: cmd.c  com_channel.c  com_master.c  coords.c  drone.c  leap.cpp  lua_bindings.c  mouse.c  navdata.c  network.c  test_visp.cpp  user_input.c  utils.c  vicon.cpp  video.c  video_decode.c  video_display.c  video_dump.c  video_opencv.c  video_process.c  video_queue.c  virtual_vicon.cpp  visp.cpp  vrpn_client.cpp
src/leapmotion/: Leap  Leap.cpp  LeapData.h  Makefile
test/: .gitignore  Makefile  README.md  land.lua  pid.lua  test_com_channel  test_com_channel.c  test_coords.lua  test_face.lua  test_icon.lua  test_pid.lua  test_takeoff.lua  test_video.lua  userinput.lua  userinput_leap.lua  userinput_zqsd.lua  utils.lua
(+14 files in other folders)
